06 Jul 2010 Add FTLIB.C FakeTape library; add support in hetmap and hetinit for 
            FAKETAPE.
22 Jun 2010 CAPPING feature. Capping can be set in hercules.cnf with the keyword
            CAPPING and a number, representing the maximum MIPS for CPs. Capping
            does not apply to specialty engines.
15 Jun 2010 'QUIT' processing has changed. The 'cmdlevel' is defaulting to
            operator, maintenance and programmer. If 'quit' is entered and
            developer is not enabled then 'quit' will check for any active
            cpu. If an active cpu is found, a message is presented indicating
            that the system is running. A second message is then presented
            asking for confirmation by entering a 2nd 'quit' command. 
            If 'cmdlevel +developer' has been entered, then 'quit' stops
            hercules immediately. 'qquit' has been removed.
13 Jun 2010 'EXCPs' tag has been changed to 'IO'.
13 Jun 2010 'QUIT' will now only ask for 2nd quit if any processor is active.
            New message added indicating that the machine is not quiesced.
13 Jun 2010 The 60 seconds for QUIT and SSD has been replaced by #define 
            QUITTIME_PERIOD and is now defaulted to 10 seconds.
08 Jun 2010 'scpimply' and 'scpecho' use ON/OFF now instead of being a toggle.
03 Jun 2010 'scpimply' command and function added. 'Unknown' commands are passed to the
            scp for processing, if the scp has enabled scp operator commands.
03 Jun 2010 MAXCPU is reset to NUMCPU if NUMCPU exceeds MAXCPU; Warning message issued.
03 Jun 2010 QQUIT added for cmdlevels above SYSOPER. (Quick QUIT)
26 May 2010 QUERY command and enhancements. See QUERY HELP for assistance
25 May 2010 Add EXCP counts to all devices
20 May 2010 QUIT and SSD require 2nd command within 60 seconds.
12 May 2010 Addition of a native Windows Threading Model (wthreads) enabled with
            OPTION_WTHREADS. Requires WIN2K and later. Disables PTTRACE.